--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,6 +11,8 @@ permissions:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
+    env:
+      VITE_AGORA_APP_ID: ${{ secrets.AGORA_APP_ID }}
     steps:
       - name: Checkout
         uses: actions/checkout@v3
